# QML_Design_CompSec

./: CMakeLists.txt  CMakeLists.txt.autosave  Lab1.qml  Lab2.qml  Lab3.qml  Lab4.qml  Lab5.qml  Lab6.qml  Lab7.qml  LoaderPlug.qml  Main.qml  PopUp.qml  WButton.qml  WButton.qml.autosave  WPlatform.qml  WPopUp.qml  WStateButton.qml  WText.qml  WTextField.qml  constants.h  geometry.cpp  geometry.h  iofile.h  labcore1.cpp  labcore1.h  labcore2.cpp  labcore2.h  labcore3.cpp  labcore3.h  labcore4.cpp  labcore4.h  labcore5.cpp  labcore5.h  labcore6.cpp  labcore6.h  labcore7.cpp  labcore7.h  main.cpp  qmltools.h  tools.h
